[gd_scene load_steps=15 format=3 uid="uid://dcjovovkbs1k2"]

[ext_resource type="Script" path="res://Scripts/sc_enemy_states.gd" id="1_biqsa"]
[ext_resource type="Script" path="res://Scripts/sc_object_action_manager.gd" id="2_q3nau"]
[ext_resource type="Texture2D" uid="uid://dhc051cb64n8k" path="res://Sprites/Enemy/Enemy_Idle.png" id="3_lrreb"]
[ext_resource type="AnimationLibrary" uid="uid://ui6ic7nwde14" path="res://Sprites/Enemy/Enemy.res" id="4_nnc1d"]
[ext_resource type="Script" path="res://Scripts/sc_hitbox.gd" id="4_sjdbd"]
[ext_resource type="PackedScene" uid="uid://cgamf07l4b1q" path="res://Prefabs/Data/Attacks/generic_attack.tscn" id="5_osuc2"]
[ext_resource type="Script" path="res://Scripts/sc_enemy_movement.gd" id="6_sjakk"]
[ext_resource type="Script" path="res://Scripts/sc_character_health.gd" id="7_3jc63"]

[sub_resource type="Animation" id="Animation_p84m8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hurtbox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -34.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/HBox:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/HBox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(44, -45)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/HBox:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0.8, 0.9)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Hitbox/HBox:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1.115, 2.39)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Hitbox/HBox:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Hitbox")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [true, null],
"method": &"apply_properties"
}]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CharacterSprite:texture")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_lrreb")]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Hurtbox:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CharacterSprite:scale")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CharacterSprite:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_icnig"]
_data = {
"RESET": SubResource("Animation_p84m8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jbblf"]
size = Vector2(37, 69)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_58dvy"]
radius = 3.0
height = 32.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b67s3"]
size = Vector2(53, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_um4cg"]

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("search_timer")]
collision_layer = 34
collision_mask = 211
script = ExtResource("1_biqsa")
search_timer = NodePath("SearchTimer")
attack_cooldown = 2.0

[node name="Moves" type="CharacterBody2D" parent="." node_paths=PackedStringArray("attack_range")]
collision_layer = 8
collision_mask = 4
script = ExtResource("2_q3nau")
attack_range = NodePath("../AttackRange")
anim_library = "Enemy"
anim_idle = "idle"
anim_move = "move"
anim_knockdown = "knockdown"
anim_hitstun = "stun"
anim_death = "death"
anim_attacks = PackedStringArray("punch")

[node name="CharacterSprite" type="Sprite2D" parent="Moves"]
texture_filter = 1
texture = ExtResource("3_lrreb")
offset = Vector2(0, -62)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Moves"]
libraries = {
"": SubResource("AnimationLibrary_icnig"),
"Enemy": ExtResource("4_nnc1d")
}

[node name="Hitbox" type="Area2D" parent="Moves"]
collision_layer = 4
collision_mask = 8
script = ExtResource("4_sjdbd")

[node name="HBox" type="CollisionShape2D" parent="Moves/Hitbox"]
position = Vector2(44, -45)
scale = Vector2(1.115, 2.39)
disabled = true
debug_color = Color(0.588235, 0, 0, 0.419608)

[node name="GenericAttack" parent="Moves/Hitbox" instance=ExtResource("5_osuc2")]
attack_id = 1
base_damage = 5.0
damage_type = 1
base_kb_distance = 10.0

[node name="Hurtbox" type="CollisionShape2D" parent="Moves"]
position = Vector2(0, -34.5)
scale = Vector2(0.8, 0.9)
shape = SubResource("RectangleShape2D_jbblf")
debug_color = Color(0, 0.588235, 0, 0.419608)

[node name="BaseCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 4.71239
shape = SubResource("CapsuleShape2D_58dvy")

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 16

[node name="RangeBox" type="CollisionShape2D" parent="AttackRange"]
scale = Vector2(2.88, 1)
shape = SubResource("RectangleShape2D_b67s3")
debug_color = Color(0.92319, 5.09223e-05, 0.684713, 0.42)

[node name="SearchRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="SearchBox" type="CollisionShape2D" parent="SearchRange"]
scale = Vector2(37, 37)
shape = SubResource("RectangleShape2D_um4cg")
debug_color = Color(0, 0.6, 0.701961, 0.133333)

[node name="Movement" type="Node" parent="."]
script = ExtResource("6_sjakk")
max_speed = 36.0

[node name="KnockdownTimer" type="Timer" parent="Movement"]

[node name="HealthManager" type="Node" parent="."]
script = ExtResource("7_3jc63")
immunity_time = 0.0

[node name="SearchTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="Moves/AnimationPlayer" to="Moves" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Moves/Hitbox" to="Moves" method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="body_entered" from="SearchRange" to="." method="_on_search_range_body_entered"]
[connection signal="body_exited" from="SearchRange" to="." method="_on_search_range_body_exited"]
[connection signal="timeout" from="Movement/KnockdownTimer" to="Movement" method="_on_timer_timeout"]
